--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- AOS  -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- fevivon  -->
     <link rel="icon" type="image/x-icon" href="./images/logo/favicon.png">
     <!-- swiper js  -->
@@ -33,7 +35,7 @@
     <!-- peloader  -->
     <div id="preloader">
         <div id="status"><img src="./images/preloader.gif" alt=""></div>
-      </div>
+    </div>
 
     <!-- header  -->
     <header id="home">
@@ -125,14 +127,14 @@
     <!--.............   card section  ..............-->
     <section class="card-sec margin-bottom">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center" data-aos="zoom-in-down">
                 <h1>Why do every people</h1>
                 <h3>love App-mobile?</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa commodi, fugit suscipit ut</p>
             </div>
             <div class="row mt-5">
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card">
+                    <div class="inner-card" data-aos="fade-left">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -146,7 +148,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card">
+                    <div class="inner-card" data-aos="flip-left">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -160,7 +162,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card">
+                    <div class="inner-card" data-aos="fade-right">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -182,14 +184,14 @@
     <section class="feature-sec" id="feature">
         <div class="container-lg">
             <div class="row justify-content-center justify-content-md-between">
-                <div class=" col-12 col-md-6">
+                <div class=" col-12 col-md-6" data-aos="zoom-in-down">
                     <div class="feature-content">
                         <h1>Our special features</h1>
                         <p class="fs-3 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                             eiusmod tempor incididunt labore et dolore magna aliqua. Ut enim ad minim veniam quis,</p>
                     </div>
                 </div>
-                <div class=" col-12 col-md-6">
+                <div class=" col-12 col-md-6" data-aos="zoom-in-down">
                     <img src="./images/service-1.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -199,7 +201,7 @@
     <div class="feature-box-sec container margin-bottom">
         <div class="row">
             <div class="col-12 col-lg-4 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-right">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -209,7 +211,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-4 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-left">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -220,7 +222,7 @@
             </div>
 
             <div class="col-12 col-lg-5 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-right">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -230,7 +232,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-5 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-left">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -241,7 +243,7 @@
             </div>
 
             <div class="col-12 col-lg-6 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-right">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -251,7 +253,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 mb-5 col-md-6">
-                <div class="feature-box">
+                <div class="feature-box" data-aos="zoom-in-left">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -265,7 +267,7 @@
 
     <!-- ........................App Screenshot....................  -->
     <section class="screenshot py-5 margin-bottom" id="screenshot">
-        <div class="title row">
+        <div class="title row" data-aos="zoom-in-down">
             <h1 class="main-heading">App Screenshots</h1>
             <p class="sub-heading">Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
                 middle of text.</p>
@@ -298,7 +300,7 @@
 
     <!-- ....................... package section ........................  -->
     <section class="package" id="pricing">
-        <div class="row">
+        <div class="row" data-aos="zoom-in-down">
             <h1 class="main-heading">Approdable Packages</h1>
             <p class="sub-heading mb-3">Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
                 middle of text.</p>
@@ -387,7 +389,7 @@
 
     <section class="contact" id="contact">
         <div class="container-lg px-3 px-lg-0">
-            <div class="contact-title row mb-5">
+            <div class="contact-title row mb-5" data-aos="zoom-in-down">
                 <h3 class="fw-bold text-center">LET’S START A CONVERSATION!</h3>
                 <h1 class="text-center">Contact Us</h1>
             </div>
@@ -440,9 +442,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         referrerpolicy="no-referrer"></script>
     <!-- costum  -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 300,
+            duration: 800
+        });
+
+    </script>
+
     <script src="./js/main.js"></script>
 
 </body>
+
 </html>
 
 <!-- .........................THE END ...........................  -->
