--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
                     </p>
                     <div class="btn-div mt-5">
-                        <a href="#" class="main-btn me-5"><i class="fab fa-google-play me-2"></i>Play Store</a>
-                        <a href="#" class="main-btn"><i class="fa-brands fa-apple me-2"></i>App Store</a>
+                        <a href="#" class="main-btn me-5 mb-3"><i class="fab fa-google-play me-2"></i>Play Store</a>
+                        <a href="#" class="main-btn mb-3"><i class="fa-brands fa-apple me-2"></i>App Store</a>
                     </div>
                 </div>
 
@@ -125,7 +125,7 @@
     </section>
 
     <!--.............   card section  ..............-->
-    <section class="card-sec margin-bottom">
+       <section class="card-sec margin-bottom">
         <div class="container">
             <div class="row text-center" data-aos="zoom-in-down">
                 <h1>Why do every people</h1>
@@ -133,8 +133,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa commodi, fugit suscipit ut</p>
             </div>
             <div class="row mt-5">
-                <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card" data-aos="fade-left">
+                <div class="col-12 col-md-6 col-lg-4 mb-5" data-aos="zoom-out">
+                    <div class="inner-card">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -147,8 +147,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card" data-aos="flip-left">
+                <div class="col-12 col-md-6 col-lg-4 mb-5" data-aos="zoom-out">
+                    <div class="inner-card">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -161,8 +161,8 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="inner-card" data-aos="fade-right">
+                <div class="col-12 col-md-6 col-lg-4 mb-5" data-aos="zoom-out">
+                    <div class="inner-card">
                         <div class="img-heading">
                             <figure class="position-relative">
                                 <img src="./images/promo-icon-bg.png" class="img-fluid" alt="">
@@ -177,11 +177,11 @@
 
             </div>
         </div>
-    </section>
+    </section> 
 
     <!--.............   feature section  ..............-->
 
-    <section class="feature-sec" id="feature">
+     <section class="feature-sec" id="feature">
         <div class="container-lg">
             <div class="row justify-content-center justify-content-md-between">
                 <div class=" col-12 col-md-6" data-aos="zoom-in-down">
@@ -200,8 +200,8 @@
     </section>
     <div class="feature-box-sec container margin-bottom">
         <div class="row">
-            <div class="col-12 col-lg-4 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-right">
+            <div class="col-12 col-lg-4 mb-5 col-md-6" data-aos="zoom-in-right">
+                <div class="feature-box">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -210,29 +210,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-left">
-                    <h3>Beautiful Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua</p>
-                    <div class="icon-box">
-                        <i class="fa-solid fa-tree"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-lg-5 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-right">
-                    <h3>Beautiful Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua</p>
-                    <div class="icon-box">
-                        <i class="fa-solid fa-tree"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-lg-5 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-left">
+            <div class="col-12 col-lg-4 mb-5 col-md-6" data-aos="zoom-in-left">
+                <div class="feature-box">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -242,8 +221,8 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-right">
+            <div class="col-12 col-lg-5 mb-5 col-md-6" data-aos="zoom-in-right">
+                <div class="feature-box">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -252,8 +231,29 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 mb-5 col-md-6">
-                <div class="feature-box" data-aos="zoom-in-left">
+            <div class="col-12 col-lg-5 mb-5 col-md-6" data-aos="zoom-in-left">
+                <div class="feature-box">
+                    <h3>Beautiful Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua</p>
+                    <div class="icon-box">
+                        <i class="fa-solid fa-tree"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6 mb-5 col-md-6" data-aos="zoom-in-right">
+                <div class="feature-box">
+                    <h3>Beautiful Design</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua</p>
+                    <div class="icon-box">
+                        <i class="fa-solid fa-tree"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 mb-5 col-md-6" data-aos="zoom-in-left">
+                <div class="feature-box">
                     <h3>Beautiful Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua</p>
@@ -263,11 +263,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 
     <!-- ........................App Screenshot....................  -->
     <section class="screenshot py-5 margin-bottom" id="screenshot">
-        <div class="title row" data-aos="zoom-in-down">
+        <div class="title d-flex flex-column" data-aos="zoom-in-down">
             <h1 class="main-heading">App Screenshots</h1>
             <p class="sub-heading">Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
                 middle of text.</p>
@@ -291,16 +291,14 @@
                     <div class="swiper-slide">
                         <img src="./images/screenshots/5.jpg" />
                     </div>
-
                 </div>
-                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
 
     <!-- ....................... package section ........................  -->
     <section class="package" id="pricing">
-        <div class="row" data-aos="zoom-in-down">
+        <div class="d-flex flex-column" data-aos="zoom-in-down">
             <h1 class="main-heading">Approdable Packages</h1>
             <p class="sub-heading mb-3">Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
                 middle of text.</p>
@@ -384,10 +382,9 @@
     </section>
 
     <!-- ............................. contact us ............
-    .......................................
- -->
+    .......................................-->
 
-    <section class="contact" id="contact">
+     <section class="contact" id="contact">
         <div class="container-lg px-3 px-lg-0">
             <div class="contact-title row mb-5" data-aos="zoom-in-down">
                 <h3 class="fw-bold text-center">LET’S START A CONVERSATION!</h3>
@@ -416,7 +413,6 @@
                     </div>
                     <a href="#" class="main-btn">send message</a>
                 </div>
-
             </div>
         </div>
     </section>
